# shopping-list

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
.github/: filters.yaml
.github/actions/builder/: action.yml
.github/actions/check-js/: action.yml
.github/actions/check-python/: action.yml
.github/actions/deploy-image-to-ec2/: action.yml
.github/actions/fly-deploy/: action.yml
.github/actions/publish-image-to-ecr/: action.yml
.github/actions/test-js/: action.yml
.github/actions/test-python/: action.yml
.github/workflows/: check-quality.yml  check.yml  deploy-to-ec2.yml  deploy-to-ecr.yml  deploy.yml  main.yml  pr.yml
.infrastructure/v1/: backend-task-definition.json  frontend-task-definition.json  locals.tf  main.tf  prod.tfvars  variables.tf
.infrastructure/v1/alb/: alb.tf  inputs.tf  outputs.tf
.infrastructure/v1/ecr/: ecr.tf  inputs.tf
.infrastructure/v1/ecs/: cluster.tf  inputs.tf  locals.tf  outputs.tf  tasks.tf
.infrastructure/v1/full-stack-site/: README.md  database.tf  inputs.tf  locals.tf  outputs.tf  services.tf
.infrastructure/v1/networking/: README.md  locals.tf  networking.tf  outputs.tf
.infrastructure/v1/tasks/: inputs.tf  locals.tf  prod.tfvars  tasks.tf
.run/: [backend] Dockerfile.run.xml  backend.run.xml  dev.run.xml  docker_backend.run.xml  docker_frontend.run.xml
backend/: .dockerignore  Dockerfile  Makefile  alembic.ini  create_schema.py  create_tables.py  exceptions.py  fly.toml  init_app.sh  main.py  pyproject.toml  settings.py  utils.py
backend/.fleet/: run.json
backend/api/: payloads.py  utils.py
backend/api/v1/: auth.py  item.py  router.py  shopping.py
backend/api/v1/lists/: collaborator.py  item.py  router.py  shopping.py
backend/api/v1/shopping/: shopping.py
backend/api/v1/user/: auth.py
backend/database/: env.py
backend/database/versions/: 30b5bf3147f9_index_username.py  353ac7208a4e_add_indexes.py  5e0e2dbc5470_add_updated_and_created_at.py  7ad9da91426f_enforce_unique_usernames.py  b18fc54817ed_create_tables.py
backend/models/: schema.py
backend/src/api/: payloads.py  utils.py
backend/src/api/v1/: auth.py  router.py  websocket.py
backend/src/api/v1/lists/: collaborator.py  item.py  router.py  shopping.py
backend/src/models/: schema.py
backend/src/querying/: querying.py
backend/src/utils/: dependencies.py  errors.py
backend/static/: collaborate.html  register.html
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth.py  test_collaborator.py  test_item.py  test_shopping.py
deploy/: main.tf  terraform.tfstate  terraform.tfstate.backup
deploy/ansible/: config.yaml
deploy/ecr/: main.tf  outputs.tf  variables.tf
deploy/service/: main.tf  variables.tf
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .dockerignore  .env  Dockerfile  fly.toml  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/.fleet/: run.json
frontend/.svelte-kit/: tsconfig.json
frontend/public/: styles.css
frontend/src/: app.html  hooks.server.ts  stores.ts
frontend/src/components/: GoogleLogOut.svelte  GoogleSignIn.svelte  HomePage.svelte  ItemAdder.svelte  List.svelte  ListItem.svelte  ListSummary.svelte  Login.svelte  Menu.svelte  MyLists.svelte  PlaceholderItem.svelte  Register.svelte  ShoppingList.svelte  ShoppingListItem.svelte  WelcomePage.svelte
frontend/src/lib/: api.ts  auth.ts
frontend/src/lib/server/: api.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  BurgerMenu.svelte  ShoppingListItem.svelte  styles.css
frontend/src/routes/about/: +page.svelte
frontend/src/routes/lists/[listID=integer]/: +page.server.ts  +page.svelte  +server.ts
frontend/src/routes/lists/[listID=integer]/collaborator/: +server.ts
frontend/src/routes/lists/[listID=integer]/collaborator/validate/[token]/: +page.server.ts  +page.svelte
frontend/src/routes/lists/[listID]/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/lists/new/: +page.server.ts  +page.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/logout/: +page.server.ts  +page.svelte
frontend/src/routes/register/: +page.server.ts  +page.svelte
frontend/src/services/: auth.ts
shopping-list/: package-lock.json  package.json
shopping-list/src/routes/: +layout.svelte  +page.svelte  ItemAdder.svelte  Menu.svelte  ShoppingList.svelte
src/: config.rs  main.rs
src/database/: interface.rs  mod.rs  schema.rs  surreal.rs
src/endpoints/: mod.rs  payloads.rs  shopping.rs
