[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Matt Barkway <matt.barkway@ovo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-jose = "^3.3.0"
passlib = "^1.7.4"
alembic = "^1.11.1"
psycopg2 = {version = "^2.9.7", optional = true}
asyncpg = "^0.28.0"
sendgrid = "^6.10.0"
bcrypt = "4.0.1"
sqlalchemy = "^2.0.25"
pydantic = "^2.6.1"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
itsdangerous = "^2.1.2"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.7"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
ruff = "^0.2.1"
pytest = "^7.4.0"
pytest-docker = "^2.0.0"
pytest-env = "^0.8.2"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pre-commit = "^3.4.0"
psycopg2-binary = "^2.9.7"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__", "alembic"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
# Extra options:
addopts = [
    "--strict-markers",
    "--tb=short",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "-v",
    "--asyncio-mode=auto",
]
env = [
    "DATABASE = sl",
    "DB_USER = postgres",
    "DB_PASSWORD = postgres",
    "DB_HOST = 0.0.0.0",
    "DB_PORT = 5432",
    "ASYNC_DRIVER = asyncpg",
    "DIALECT = postgresql",
    "DRIVER = psycopg2",
    "HOST = 0.0.0.0:8000",
    "SALT = 1234",
    "SECRET_KEY = 1234",
    "ALGORITHM = HS256",
]


[tool.mypy]
python_version = "3.12"
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
disable_error_code = "type-arg"
implicit_reexport = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = false
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "node_modules",
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    "tests",
    "migrations",
    "docs",
]
